manifests/cluster/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: 5055
